# xagent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  docker-compose-pgvector.yml  docker-compose-sandbox.yml  docker-compose.yml  example.env  pyproject.toml  run_web_debug.py
.github/workflows/: ci.yml  docker-publish.yml  nightly-build.yml  sandbox-publish.yml  test-migrations.yml
db/postgresql/: schema_backup.sql
doc/: vanna-sql-asset-design-summary.md  xagent记忆改造.md  xagent记忆治理队列设计.md  改造计划v1.md  改造计划v2.md  改造计划v3.md  术语解释v1.md  需求设计v1.md
docker/: Dockerfile.backend  Dockerfile.sandbox  README.md  sandbox-requirements.txt
docs/: 3.4-nested-agents.md  ch10-graph-model-and-nodes.md  ch11-graph-walker-and-validation.md  ch5-base-agent-model.md  ch6-agent-runner-execution.md  ch7-vertical-agent-framework.md  ch8-react-pattern.md  ch9-dag-plan-execute-loop.md  gdphttp接口调用tools.md  http2mcp兼容语义对照.md  http资产注册.md  log.md  vannasqlexecute.md  xagentvanna实施计划.md  xagent用户审批管理.md  审批流程阅读顺序清单.md
docs/superpowers/plans/: 2026-04-04-system-approval-implementation.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: widget.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin-mcp/: page.tsx
frontend/src/app/approval-queue/: page.tsx
frontend/src/app/channels/: page.tsx
frontend/src/app/data-sources/: page.tsx
frontend/src/app/datamake/: page.tsx
frontend/src/app/debug/: page.tsx
frontend/src/app/http-assets/: page.tsx
frontend/src/app/knowledge-bases/: page.tsx
frontend/src/app/login/: layout.tsx
frontend/src/app/sql-assets/: page.tsx
frontend/src/app/system-registry/: page.tsx
frontend/src/app/task/: page.tsx
frontend/src/app/templates/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/components/: agent-input.tsx  collapsible-section.tsx  config-dialog.tsx  execution-mode-selector.tsx  model-info-display.tsx  preview-sheet.tsx  thinking-timeline.tsx  vibe-mode-selector.tsx
frontend/src/components/chat/: AgentCard.tsx  ChatInput.tsx  ChatInput_BACKUP_1166.tsx  ChatInput_LOCAL_1166.tsx  ChatMessage.tsx  ChatStartScreen.tsx  FileChip.tsx  FileMentionDropdown.tsx  TraceEventRenderer.tsx  candidate-choice-card.tsx  clarification-form.tsx
frontend/src/components/datamake/: database-form-dialog.tsx
frontend/src/components/file/: docx-preview-renderer.tsx  excel-preview-renderer.tsx  file-attachment.tsx  file-preview-content.tsx  file-preview-dialog.tsx  file-viewer.tsx  standalone-file-preview-dialog.tsx  task-file-manager.tsx
frontend/src/components/kb/: cloud-connect-dialog.tsx  knowledge-base-creation-dialog.tsx  knowledge-base-detail-helpers.test.ts  knowledge-base-detail-helpers.ts  knowledge-base-detail.component.test.tsx  knowledge-base-detail.tsx  knowledge-base-document-list.tsx
frontend/src/components/layout/: center-panel.tsx  layout-content.tsx  left-panel.tsx  resizable-three-column-layout.tsx  right-panel.tsx  sidebar.test.tsx  sidebar.tsx  three-column-layout.tsx
frontend/src/components/log/: log-event.tsx  messages-preview.tsx
frontend/src/contexts/: app-context-chat.tsx  app-context.tsx  mcp-apps-context.tsx
frontend/src/hooks/: use-datamake-sync.test.tsx  use-datamake-sync.ts  use-file-mention.ts  use-mentions.ts  use-websocket.test.tsx  use-websocket.ts
frontend/src/lib/: api-errors.test.ts  api-errors.ts  api-wrapper.ts  auth-pages.ts  branding.ts  mcp-utils.ts  models.ts  sidebar-compact.ts  theme.ts  utils.test.ts  utils.ts
frontend/src/types/: template.ts
frontend/tests/: gdp_http_asset_registration.spec.ts
scripts/: backfill_uploaded_files.py  import_mockapi_to_gdp_http.py  setup_finance_demo.py  xagent-server.bat  xagent-server.sh
src/xagent/: config.py
src/xagent/core/: workspace.py
src/xagent/datamakepool/: __init__.py
src/xagent/db/: config.py  migration.py
src/xagent/integrations/: __init__.py
src/xagent/migrations/: README  env.py
src/xagent/sandbox/: __init__.py  base.py  boxlite_sandbox.py  docker_sandbox.py
src/xagent/skills/: __init__.py  availability.py  catalog.py  catalog_models.py  context.py  manager.py  metadata.py  parser.py  selector.py  utils.py
src/xagent/templates/: __init__.py  manager.py
src/xagent/web/: __init__.py  __main__.py  access_logging.py  app.py  config.py  dynamic_memory_store.py  init_tool_configs.py  kb_physical_sync.py  logging_config.py  mcp_apps.py  memory_utils.py  sandbox_manager.py  sandbox_store.py  user_isolated_memory.py
src/xagent/worker/: __init__.py  maintenance_scheduler.py  memory_governance.py
tests/: conftest.py
tests/core/: test_config.py
tests/core/agent/: test_nested_agents.py  test_runner.py
tests/core/policy/: test_sql_policy_gateway.py  test_sql_risk_analyzer.py
tests/core/tools/: test_command_executor.py  test_create_agent_tool.py  test_exa_web_search.py  test_file_tool.py  test_image_tool.py  test_workspace_file_operations.py
tests/core/utils/: test_encryption.py  test_type_check.py
tests/integration/: test_auto_migration_startup.py  test_rag_refactored_integration.py  test_sql_approval_resume.py
tests/migrations/: test_custom_api_migration.py  test_lancedb_backfill_logic.py
tests/sandbox/: test_boxlite_sandbox.py  test_docker_sandbox.py
tests/skills/: test_utils.py
tests/web/: test_admin_file_access.py  test_agent_tools_visibility_api.py  test_chat_history_service.py  test_chat_task_model_ids.py  test_config.py  test_docker_sandbox_store.py  test_file_upload.py  test_model_api.py  test_sandbox_manager.py  test_sandbox_manager_cleanup.py  test_sql_approval_api.py  test_sql_approval_models.py  test_sql_approval_service.py
tests/web/api/: test_agents_kb_tool_validation.py  test_asset_change_requests_api.py  test_custom_api.py  test_gdp_http_assets.py  test_kb_dir.py  test_kb_exception_decorator.py  test_kb_ingest_separators.py  test_kb_web_ingestion_file_handler.py  test_system_registry_api.py  test_templates_api.py  test_tools_api.py  test_websocket_builder_chat.py  test_websocket_preview.py
xagent/: __init__.py
(+892 files in other folders)
