[project]
authors = [
  { name = "Jicheng Shi", email = "rogershijicheng@gmail.com" },
  { name = "Xuye Qin", email = "qinxuye@gmail.com" },
]
name = "xagent"
dynamic = ["version"]
description = "a powerful agent os with great compatibility"
license = { text = "Xagent Source License" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pydantic >= 2.11.7",
  "langchain-openai >= 0.3.27",
  "langchain >= 0.3.26",
  "langchain-community >= 0.3.21",
  "openai >= 1.50.0",
#  "anthropic >= 0.84.0",
#  "google-genai >= 1.65.0",
#  "xinference-client >= 2.3.0",
#  "zai-sdk>=0.0.3.2",
  "numexpr >= 2.11.0",
  "aiohttp >= 3.12.14",
  "tqdm >= 4.66.0",
  "beautifulsoup4 >= 4.12.3",
  "html2text >= 2025.4.15",
  "PyYAML >= 6.0.2",
  "fastapi >= 0.35.0",
  "uvicorn >= 0.35.0",
  "websockets>=15.0.1",
  "httpx >= 0.27.2",
  "rich >= 14.0.0",
  "prompt_toolkit >= 3.0.0",
  "langfuse >= 3.2.1, < 5.0.0",  # Compatible with both v3 and v4
  "python-dotenv >= 1.0.1",
  "mcp>=1.12.4",
  "requests >= 2.32.0",
  "pillow >= 10.0.0",
  "lancedb>=0.13.0",
  "pyarrow>=16.1.0",
  # Basic document processing (keep pypdf for basic PDF support)
  "pypdf>=4.0.0",
  "tiktoken>=0.8.0",
  # Database ORM and migrations (core for web interface)
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "python-jose[cryptography]>=3.3.0",
  # Utilities
  "docker>=7.1.0",
  "json-repair==0.35.0",
  "jsonschema>=4.25.1",
  "beartype>=0.18.5",
  "matplotlib>=3.5.0",
#  "google-auth-oauthlib>=1.2.0",
#  "google-api-python-client>=2.111.0",
  "boxlite>=0.6.0; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
  "filelock>=3.0.0",
  "cloudpickle>=3.0.0",
  # Data science libraries (core for RAG and analysis)
  "pandas>=1.3.0",
  # Special handling - AI-enhanced document processing
#  "deepdoc-lib==0.2.0",
  "aiogram>=3.4.1",
  "aiohttp-socks>=0.8.4",
]

[project.optional-dependencies]
# ==============================================================================
# 文档处理
# ==============================================================================
document-processing = [
  "pdfplumber>=0.10.0",
  "unstructured>=0.15.0",
  "pymupdf>=1.23.0,<1.27.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "python-pptx>=0.6.0",
  "pypdf2>=3.0.1",
]

# AI-related document processing
ai-document = ["docling>=2.68.0"]

# ==============================================================================
# 数据库驱动 - 按类型分组
# ==============================================================================

# 开源数据库
database-mysql = [
  "pymysql>=1.1.0",
  "mysql-connector-python>=8.0.0",
]
database-postgresql = [
  "psycopg2-binary>=2.9.0",
  "pg8000>=1.30.0",  # Pure Python PostgreSQL driver
]
database-sqlite = []  # 内置，无需额外依赖

# NoSQL 数据库
database-mongodb = ["pymongo>=4.0.0"]
database-redis = ["redis>=5.0.0"]

# 商业数据库
database-oracle = [
  "oracledb>=2.0.0",  # 推荐使用 oracledb (cx_Oracle 的现代替代)
]
database-sqlserver = [
  "pymssql>=2.2.0",
]

# OLAP / 分布式数据库
database-clickhouse = ["clickhouse-connect>=0.7.0"]
database-tidb = []  # 兼容 MySQL，使用 pymysql

# 国产数据库
database-dameng = ["dmPython>=2.0.0"]  # 达梦
database-kingbase = [
  "psycopg2-binary>=2.9.0",  # 人大金仓兼容 PostgreSQL
]
database-gaussdb = [
  "psycopg2-binary>=2.9.0",  # 华为 GaussDB 兼容 PostgreSQL
]
database-oceanbase = [
  "pymysql>=1.1.0",  # 蚂蚁 OceanBase 兼容 MySQL
]
database-vastbase = [
  "psycopg2-binary>=2.9.0",  # 海量 Vastbase 兼容 PostgreSQL
]
database-highgo = [
  "psycopg2-binary>=2.9.0",  # 瀚高 HighGo 兼容 PostgreSQL
]
database-goldendb = [
  "pymysql>=1.1.0",  # 中兴 GoldenDB 兼容 MySQL
]
database-polardb = [
  "pymysql>=1.1.0",  # 阿里云 PolarDB 兼容 MySQL
]

# 国产数据库合集
database-domestic = [
  "dmPython>=2.0.0",  # 达梦
  "psycopg2-binary>=2.9.0",  # 金仓/GaussDB/Vastbase/HighGo
  "pymysql>=1.1.0",  # OceanBase/GoldenDB/PolarDB
]

# 所有数据库驱动
database-all = [
  # 开源数据库
  "pymysql>=1.1.0",
  "mysql-connector-python>=8.0.0",
  "psycopg2-binary>=2.9.0",
  "pg8000>=1.30.0",
  # NoSQL
  "pymongo>=4.0.0",
  "redis>=5.0.0",
  # 商业数据库
  "oracledb>=2.0.0",
  "pymssql>=2.2.0",
  # OLAP
  "clickhouse-connect>=0.7.0",
  # 国产数据库
  "dmPython>=2.0.0",
]

# 分析型数据库
duckdb = ["duckdb>=1.0.0,<2.0", "duckdb-engine>=0.10.0,<1.0"]

# ==============================================================================
# 其他可选功能
# ==============================================================================

# Browser automation
browser = ["playwright>=1.40.0"]

# Alternative vector databases (optional alternatives to LanceDB)
chromadb = ["chromadb"]
milvus = ["pymilvus>=2.6.9,<3.0.0"]

# ==============================================================================
# 完整安装 - 一套命令安装所有依赖
# pip install -e ".[all]"
# ==============================================================================
all = [
  # 文档处理
  "pdfplumber>=0.10.0",
  "unstructured>=0.15.0",
  "pymupdf>=1.23.0,<1.27.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "python-pptx>=0.6.0",
  "pypdf2>=3.0.1",
  "docling>=2.68.0",
  # 开源数据库
  "pymysql>=1.1.0",
  "mysql-connector-python>=8.0.0",
  "psycopg2-binary>=2.9.0",
  "pg8000>=1.30.0",
  # NoSQL
  "pymongo>=4.0.0",
  "redis>=5.0.0",
  # 商业数据库
  "oracledb>=2.0.0",
  "pymssql>=2.2.0",
  # OLAP
  "clickhouse-connect>=0.7.0",
  "duckdb>=1.0.0,<2.0",
  "duckdb-engine>=0.10.0,<1.0",
  # 国产数据库
  "dmPython>=2.0.0",
  # 向量数据库
  "chromadb",
  "pymilvus>=2.6.9,<3.0.0",
  # 浏览器自动化
  "playwright>=1.40.0",
]

[dependency-groups]
# Development tools (linting, formatting)
dev = [
  "pre-commit>=4.2.0",
  "ruff>=0.12.3",
  "flake8>=7.3.0",
  "mypy>=1.16.1",
  { include-group = "test" },
  { include-group = "static-type-check" },
]

# Testing dependencies
test = [
  "pytest>=8.0",
  "pytest-mock>=3.14.1",
  "pytest-cov>=6.2.1",
  "pytest-asyncio>=0.24.0",
  "pytest-xdist>=3.0",
  "pytest-dotenv>=0.5.2",
  "pytest-timeout>=2.4.0",
  "pytest-socket>=0.7.0",
  "chromadb",
  "pymilvus>=2.6.9,<3.0.0",
  "copilotkit==0.1.69",
  "openpyxl>=3.1.5",
]

# Static type checking
static-type-check = [
  "types-PyYAML>=6.0",
  "types-requests>=2.0.0",
  "types-openpyxl>=3.1.5",
  "types-setuptools>=69.0.0",
  "types-docker>=7.1.0.20251009",
  "types-redis>=4.0.0",
  "types-pymysql>=1.0.0",
]

[project.scripts]
xagent-web = "xagent.web.__main__:main"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]


addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration tests",
  "slow: marks tests as slow running tests",
  "postgresql: marks tests that require PostgreSQL database",
]

[tool.mypy]
mypy_path = "src:stubs"
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["src/xagent/web/uploads/", "src/xagent/migrations/"]
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
python_version = "3.11"
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true
[[tool.mypy.overrides]]
module = [
  "docx",
  "pptx",
  "pptx.*",
  "pdfplumber",
  "unstructured.*",
  "fitz",
  "pandas",
  "matplotlib",
  "matplotlib.pyplot",
  "deepdoc",
  "deepdoc.*",
  "json_repair",
  "langchain_core.*",
  "langchain.*",
  "jose",
  "alembic",
  "alembic.*",
  "xinference",
  "xinference.*",
  "xinference_client",
  "aiogram",
  "aiogram.*",
  # 数据库驱动
  "pymysql",
  "mysql.*",
  "psycopg2",
  "psycopg2.*",
  "pg8000",
  "pg8000.*",
  "pymongo",
  "pymongo.*",
  "redis",
  "oracledb",
  "pymssql",
  "clickhouse_connect",
  "clickhouse_connect.*",
  "dmPython",
  "duckdb",
  "duckdb.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["core.tools.file_tool"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["xagent.core.tools.core.vision_tool"]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = [
  "xagent.core.model.chat.basic.xinference",
  "xagent.core.model.embedding.xinference",
  "xagent.core.model.image.xinference",
  "xagent.core.model.asr.xinference",
  "xagent.core.model.tts.xinference",
  "xagent.web.channels.telegram.bot",
  "xagent.web.channels.telegram.handler",
]
disallow_any_unimported = false
warn_unused_ignores = false

[tool.hatch.build.targets.wheel]
packages = ["src/xagent"]
include = [
  "src/xagent/skills/builtin/**",
  "src/xagent/templates/built_in/**",
  "src/xagent/web/README.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/xagent/skills/builtin/**",
  "src/xagent/templates/built_in/**",
  "src/xagent/web/README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
